crucible-syntax/test-data/simulator-tests/assume-merge.out.good
==== Begin Simulation ====

==== Finish Simulation ====
==== Proof obligations ====
Assuming:
* The branch in main from test-data/simulator-tests/assume-merge.cbl:4:5 to test-data/simulator-tests/assume-merge.cbl:6:14
    intLe 0 cx@0:i
* in main test-data/simulator-tests/assume-merge.cbl:6:5: even
    eq 0 (intMod cx@0:i 2)
Prove:
  test-data/simulator-tests/assume-merge.cbl:12:5: error: in main
  oopsie!
  false
COUNTEREXAMPLE
Assuming:
* The branch in main from test-data/simulator-tests/assume-merge.cbl:4:5 to test-data/simulator-tests/assume-merge.cbl:9:14
    not (intLe 0 cx@0:i)
* in main test-data/simulator-tests/assume-merge.cbl:9:5: odd
    eq 1 (intMod cx@0:i 2)
Prove:
  test-data/simulator-tests/assume-merge.cbl:12:5: error: in main
  oopsie!
  false
COUNTEREXAMPLE
